syntax = "proto3";
package customergrpc;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Customer {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/customer"
            body: "*"
        };
    }

    rpc ConfirmEmailAddress (ConfirmEmailAddressRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/customer/{id}/emailaddress/confirm"
            body: "*"
        };
    }

    rpc ChangeEmailAddress (ChangeEmailAddressRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/customer/{id}/emailaddress"
            body: "*"
        };
    }

    rpc ChangeName (ChangeNameRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/customer/{id}/name"
            body: "*"
        };
    }

    rpc Delete (DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/customer/{id}"
        };
    }

    rpc RetrieveView (RetrieveViewRequest) returns (RetrieveViewResponse) {
        option (google.api.http) = {
            get: "/v1/customer/{id}"
        };
    }
}

// Register Customer

message RegisterRequest {
    string emailAddress = 1;
    string givenName = 2;
    string familyName = 3;
}

message RegisterResponse {
    string id = 1;
}

// Confirm Customer EmailAddress

message ConfirmEmailAddressRequest {
    string id = 1;
    string confirmationHash = 2;
}

// Change Customer EmailAddress

message ChangeEmailAddressRequest {
    string id = 1;
    string emailAddress = 2;
}

// Change Customer Name

message ChangeNameRequest {
    string id = 1;
    string givenName = 2;
    string familyName = 3;
}

// Delete Customer

message DeleteRequest {
    string id = 1;
}

// Retrieve Customer View

message RetrieveViewRequest {
    string id = 1;
}

message RetrieveViewResponse {
    string emailAddress = 1;
    bool isEmailAddressConfirmed = 2;
    string givenName = 3;
    string familyName = 4;
    uint64 version = 5;
}